Adding connection Drinks tab

--- a/index.html
+++ b/index.html
@@ -12,9 +12,18 @@
 </head>
 
 <body>
-  <h3>Fine list to be paid</h3>
+
+  <h1>GIJS Payment dashboard</h1>
+
   <div id="fine-list">
-    <ul id="ul-el">
+    <h3>Fines</h3>
+    <ul id="ul-el-fines">
+    </ul>
+  </div>
+
+  <div id="drink-list">
+    <h3>Drinks</h3>
+    <ul id="ul-el-drinks">
     </ul>
   </div>
 
