--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="style.css">
   <script src="script.js" type="text/javascript" defer></script>
 
-  <title>Fine list to be paid</title>
+  <title>GIJS Payment dashboard</title>
 </head>
 
 <body>
